Fixed spacing for mathjax eqns and headers
Mathjax "show as latex" problem is exclusive to Chrome 18+
   source: http://meta.math.stackexchange.com/questions/3901/mathjax-bugs-show-math-as-tex-commands-and-bold-math-in-comments

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,10 +23,12 @@ h1, h2, h3 {
 
 h1 {
 	font-size: 44px;
+    padding: 0 0 15px 0;
 }
 
 h2 {
 	font-size: 18px;
+    padding: 0 0 10px 0;
 }
 
 h3 {
@@ -257,10 +259,10 @@ hr {
 
 /*collapsible div*/
 #content div.collapsibleHeader {
-   color: #FFFFFF;
-	border:1px solid #ccc;
-   overflow:hidden;   
-   margin-top:10px;
+    color: #FFFFFF;
+    border:1px solid #ccc;
+    overflow:hidden;   
+    margin-top:10px;
 	background:  #636363 url(/images/expand.png) no-repeat 4px 4px ;
 }
 #content div.collapsibleHeader:hover {
@@ -270,6 +272,7 @@ hr {
 #content div.collapsibleHeader h2{
    text-align: center;
    color:  #FFFFFF;
+   padding: 0 0 0 0;
    font-family: 'impact', sans-serif;
   
 }
